--- a/public/assignment/views/widget/editors/widget-image-edit.view.client.html
+++ b/public/assignment/views/widget/editors/widget-image-edit.view.client.html
@@ -18,25 +18,35 @@
 
 <div class="container-fluid">
 
-    <label for="name">Name</label>
-    <input class="form-control"
-           ng-model="model.widget.name"
-           placeholder="facebook"
-           value="top heading"
-           id="name"/>
+    <form action="/api/upload"   method="post" enctype="multipart/form-data">
+        <input  name="myFile"    type="file" class="form-control"/>
+        <input  name="width"     value="{{model.widget.width}}" style="display: none"/>
+        <input  name="userId"    value="{{model.userId}}"   style="display: none"/>
+        <input  name="websiteId" value="{{model.websiteId}}"   style="display: none"/>
+        <input  name="pageId"    value="{{model.pageId}}"   style="display: none"/>
+        <input  name="widgetId"  value="{{model.widget._id}}"   style="display: none"/>
+        <button type="submit"    class="btn btn-block btn-primary">Upload Image</button>
+    </form>
 
-    <label for="text">Text</label>
-    <input class="form-control"
-           ng-model="model.widget.text"
-           placeholder="facebook"
-           value="US Senate Reaches Compromise"
-           id="text"/>
+    <!--<label for="name">Name</label>-->
+    <!--<input class="form-control"-->
+           <!--ng-model="model.widget.name"-->
+           <!--placeholder="facebook"-->
+           <!--value="top heading"-->
+           <!--id="name"/>-->
 
-    <label for="file">Upload</label>
-    <input id="file" multiple type="file" class="form-control"/>
+    <!--<label for="text">Text</label>-->
+    <!--<input class="form-control"-->
+           <!--ng-model="model.widget.text"-->
+           <!--placeholder="facebook"-->
+           <!--value="US Senate Reaches Compromise"-->
+           <!--id="text"/>-->
 
-    <a href=""
-       class="btn btn-block btn-success">Upload</a>
+    <!--<label for="file">Upload</label>-->
+    <!--<input id="file" multiple type="file" class="form-control"/>-->
+
+    <!--<a href=""-->
+       <!--class="btn btn-block btn-success">Upload</a>-->
 
     <a ng-click="model.deleteWidget()"
        class="btn btn-block btn-danger">Delete</a>
