--- a/public/assignment/views/website/templates/website-list.view.client.html
+++ b/public/assignment/views/website/templates/website-list.view.client.html
@@ -26,10 +26,10 @@
                     </a>
                 </div>
                 <div class="col-lg-3 visible-lg">
-                    {{website.created | date}}
+                    {{website.dateCreated | date}}
                 </div>
                 <div class="col-md-3 hidden-sm hidden-xs">
-                    {{website.accessed | date}}
+                    {{website._user.username}}
                 </div>
                 <div class="col-xs-1">
                     <a href="#!/user/{{model.userId}}/website/{{website._id}}">
