--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -71,3 +71,17 @@ body {
     float: left;
     margin: 0 30px 0 30px;
 }
+
+.youtube-widget {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+}
+
+.youtube-widget iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
