--- a/public/assignment/views/widget/templates/widget-html.view.client.html
+++ b/public/assignment/views/widget/templates/widget-html.view.client.html
@@ -5,8 +5,6 @@
         </a>
         <span class="glyphicon glyphicon-align-justify"></span>
     </div>
-
-    <div class="youtube-widget">
-        <iframe width="100%" src="{{model.getYouTubeEmbedUrl(widget.url)}}" frameborder="0" allowfullscreen></iframe>
+    <div ng-bind-html="widget.text">
     </div>
 </div>
