--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -28,6 +28,12 @@
             <div ng-switch-when="YOUTUBE">
                 <div ng-include="'./views/widget/templates/widget-youtube.view.client.html'"></div>
             </div>
+            <div ng-switch-when="HTML">
+                <div ng-include="'./views/widget/templates/widget-html.view.client.html'"></div>
+            </div>
+            <div ng-switch-when="TEXT">
+                <div ng-include="'./views/widget/templates/widget-text.view.client.html'"></div>
+            </div>
         </div>
     </div>
 </sortable>
