--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -17,7 +17,7 @@
 </nav>
 
 <sortable pid="model.pageId" class="container-fluid">
-    <div ng-repeat="widget in model.widgets">
+    <div ng-repeat="widget in model.widgets | orderBy: 'index'">
         <div id="{{widget._id}}" class="widget" ng-switch="widget.type">
             <div ng-switch-when="HEADING">
                 <div ng-include="'./views/widget/templates/widget-heading.view.client.html'"></div>
