--- a/public/assignment/views/components/profile-footer-dark.view.client.html
+++ b/public/assignment/views/components/profile-footer-dark.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
-            <a href="#!/user/{{model.userId}}">
+            <a href="#!/user">
                 <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
             </a>
         </p>
