--- a/public/assignment/views/user/templates/login.view.client.html
+++ b/public/assignment/views/user/templates/login.view.client.html
@@ -23,6 +23,11 @@
         <a class="btn btn-primary btn-block"
            ng-click="model.login(username, password)">Login</a>
 
+        <a href="/auth/facebook"
+           class="btn btn-primary btn-block">
+            <span class="fa fa-facebook"></span>Login with Facebook
+        </a>
+
         <a class="btn btn-success btn-block"
            href="#!/register">Register</a>
     </div>
